test/js/node/test/parallel/test-stream-pipeline-uncaught.js.log.txt
140 |     }
141 |   }
142 | }
143 | function pipeline(...streams) {
144 |   return pipelineImpl(streams, once(popCallback(streams)));
145 | function pipelineImpl(streams, callback, opts) {
                           ^
TypeError: requires 2 arguments
      at pipelineImpl (internal:streams/pipeline:145:22)
      at node:stream/promises:8:23
      at new Promise (1:11)
      at pipeline (node:stream/promises:7:18)
      at /Users/bun/code/bun/test/js/node/test/parallel/test-stream-pipeline-uncaught.js:18:1
      at asyncFunctionResume (1:11)
      at promiseReactionJobWithoutPromiseUnwrapAsyncContext (1:11)
Mismatched <anonymous> function calls. Expected exactly 1, actual 0.
    at <anonymous> (/Users/bun/code/bun/test/js/node/test/parallel/test-stream-pipeline-uncaught.js:10:40)
    at parseModule (native)
    at <anonymous> (native:11:43)
    at asyncFunctionResume (native:1:11)
    at promiseReactionJobWithoutPromiseUnwrapAsyncContext (native:1:11)
    at promiseReactionJob (native:1:11) {
  originalLine: 271,
  originalColumn: 22
}
Mismatched <anonymous> function calls. Expected exactly 1, actual 0.
    at <anonymous> (/Users/bun/code/bun/test/js/node/test/parallel/test-stream-pipeline-uncaught.js:20:11)
    at parseModule (native)
    at <anonymous> (native:11:43)
    at asyncFunctionResume (native:1:11)
    at promiseReactionJobWithoutPromiseUnwrapAsyncContext (native:1:11)
    at promiseReactionJob (native:1:11) {
  originalLine: 271,
  originalColumn: 22
}
